css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;
  font-family: 'Prata', serif;
  font-size: 16px;
  color: #000;
  background-color: #faf9f6;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  line-height: 1.5;
}

nav {
  padding: 10px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5em;
  box-shadow: 0 4px 20px 2px rgba(0, 0, 0, 0.1);
}

.name h3 {
  font-size: 40px;
  font-family: 'Pinyon Script', cursive;
}

.nav-links {
  display: flex;
  gap: 1em;
  list-style: none;
}

.nav-links a {
  display: block;
  padding: 10px 16px;
  color: #111;
  text-decoration: none;
  transition: all ease-in-out 100ms;
}

.nav-links a:hover {
  border-bottom: #111 solid 2px;
  border-top: #111 solid 2px;
}

.hamburger {
  display: none;
  cursor: pointer;
  width: 34px;
}

.hamburger .bar {
  flex-basis: 100%;
  height: 4px;
  background-color: #111;
  margin: 3px;
}

.hero h1 {
  text-align: center;
  font-family: 'Pinyon Script', cursive;
  font-size: 90px;
  color: #faf9f6;
  padding: 0 10px;
}

.hero {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  background-image: url(../img/couple2.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

video {
  border: 1px solid black;
}

.video-date-container {
  min-height: 100vh;
  text-align: center;
  display: flex;
  justify-content: space-evenly;
  padding: 100px 50px;
  margin: 200px 0;
}

.date-container {
  min-height: 50vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  gap: 3em;
  padding: 30px;
  margin: 60px 0;
  text-align: center;
}

.date-container .couple {
  padding: 0 20px;
  font-family: 'Pinyon Script', cursive;
  font-size: 80px;
}

.date-container .date {
  font-size: 30px;
}

.countdown {
  min-height: 100vh;
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    url(../img/couple3.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: bottom;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #faf9f6;
  gap: 2em;
  padding: 30px 0;
}

.countdown h2 {
  font-size: 50px;
  text-align: center;
}

.time h3 {
  font-size: 70px;
}

.time {
  text-align: center;
}

.timebox {
  display: flex;
  gap: 2em;
}

footer {
  min-height: 60px;
  background-color: #111;
  color: #faf9f6;
  text-align: center;
  align-content: center;
  font-size: 12px;
}

footer a {
  color: #faf9f6;
}

.schedule h1 {
  font-size: 30px;
  text-align: center;
  margin-top: 70px;
}

.timeline {
  position: relative;
  max-width: 700px;
  margin: 50px auto;
}

.timeline-container {
  padding: 10px 50px;
  position: relative;
  width: 50%;

  animation: movedown 1s linear forwards;
  opacity: 0;
}

@keyframes movedown {
  0% {
    opacity: 1;
    transform: translateY(-20px);
  }
  100% {
    opacity: 1;
    transform: translateY(0px);
  }
}

.timeline-container:nth-child(2) {
  animation-delay: 1s;
}
.timeline-container:nth-child(3) {
  animation-delay: 2s;
}
.timeline-container:nth-child(4) {
  animation-delay: 3s;
}
.timeline-container:nth-child(5) {
  animation-delay: 4s;
}
.timeline-container:nth-child(6) {
  animation-delay: 5s;
}

.text-box {
  padding: 20px 30px;
  background-color: #fff;
  position: relative;
  border-radius: 5px;
  box-shadow: 5px 5px 20px 3px rgba(0, 0, 0, 0.1);
  text-align: center;
}

.text-box h2 {
  margin-bottom: 10px;
}

.left-container {
  left: 0;
}

.right-container {
  left: 50%;
}

.timeline-container img {
  padding: 2px;
  position: absolute;
  width: 40px;
  right: -20px;
  top: 32px;
  z-index: 10;
  background-color: white;
  box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.1);
  border-radius: 5px;
}

.right-container img {
  left: -20px;
}

.timeline::after {
  content: '';
  position: absolute;
  width: 6px;
  height: 100%;
  background-color: #111;
  top: 0;
  left: 50%;
  margin-left: -3px;
  z-index: -1;

  animation: moveline 6s linear forwards;
}

@keyframes moveline {
  0% {
    height: 0;
  }
  100% {
    height: 100%;
  }
}

.left-container-arrow {
  height: 0;
  width: 0;
  position: absolute;
  top: 28px;
  z-index: 1;
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;
  border-left: 15px solid #fff;
  right: -15px;
}

.right-container-arrow {
  height: 0;
  width: 0;
  position: absolute;
  top: 28px;
  z-index: 1;
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;
  border-right: 15px solid #fff;
  left: -15px;
}

.address {
  margin: 70px 0;
  padding: 30px 20px;
  text-align: center;
}

.address h4 {
  margin-bottom: 10px;
  font-size: 22px;
}

.church-address {
  margin-bottom: 70px;
}

.address a {
  display: inline-block;
  margin: 15px 0;
  padding: 12px 24px;
  border-radius: 5px;
  text-decoration: none;
  color: #111;
  background-color: #fff;
  box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease-in-out;
}

.address a:hover {
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
  transform: translateY(-2px);
}

.dress-code {
  text-align: center;
  min-height: 200px;
  align-content: center;
  padding: 10px;
}

.dress-code h1 {
  font-size: 30px;
  margin-bottom: 20px;
}

.dress-code-pics {
  margin: 0 auto 100px auto;
}

.dress-code-pics img {
  max-width: 800px;
  width: 100%;
}

.gallery-container {
  max-width: 1224px;
  width: 90%;
  margin: auto;
  padding: 40px 0;
}

.gallery-container h1 {
  font-size: 30px;
  margin-bottom: 2rem;
  text-align: center;
}

.photo-gallery {
  display: flex;
  gap: 20px;
}

.column {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.photo img {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  object-fit: cover;
}

.registry {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
  padding: 10px 20px;
}

.registry p {
  max-width: 60ch;
  text-align: center;
}

.registry a {
  padding: 12px 24px;
  text-decoration: none;
  color: #111;
  background-color: #fff;
  border-radius: 5px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease-in-out;
}

.registry a:hover {
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
  transform: translateY(-2px);
}

.faq {
  align-self: center;
  padding: 20px;
  display: flex;
  flex-direction: column;
  gap: 30px;
}
.faq h1 {
  text-align: center;
  margin-bottom: 50px;
}

.coming-soon {
  text-align: center;
}

/* Responsive Design */
@media (max-width: 850px) {
  nav {
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
  }

  .hamburger {
    display: flex;
    flex-wrap: wrap;
  }

  .nav-links {
    display: none;
    flex-basis: 100%;
    flex-wrap: wrap;
  }

  .nav-links li {
    flex-basis: 100%;
  }

  .nav-links a {
    text-align: center;
    font-size: 28px;
    padding: 30px 16px;
  }

  .hero h1 {
    font-size: 50px;
  }

  video {
    width: 320px;
  }

  .video-date-container {
    flex-direction: column-reverse;
    align-items: center;
    margin: 0;
  }

  .timebox {
    flex-direction: column;
  }

  .dress-code-pics {
    flex-direction: column;
  }

  .photo-gallery {
    flex-direction: column;
  }
}

@media screen and (max-width: 600px) {
  .timeline {
    margin: 50px auto;
  }
  .timeline::after {
    left: 31px;
  }
  .timeline-container {
    width: 100%;
    padding-left: 80px;
    padding-right: 25px;
  }
  .right-container {
    left: 0;
  }
  .left-container img,
  .right-container img {
    left: 10px;
  }
  .left-container-arrow,
  .right-container-arrow {
    border-right: 15px solid #fff;
    border-left: 0;
    left: -15px;
  }
}

